--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
         "tooltip.js": "^1.3.2",
         "tslib": "^1.10.0",
         "web-animations-js": "^2.3.2",
-        "zone.js": "~0.9.1"
+        "zone.js": "~0.9.1",
+        "google-protobuf": "^3.6.1",
+        "grpc-web": "^0.4.0",
+        "@improbable-eng/grpc-web": "^0.8.0"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.800.6",
@@ -87,6 +90,7 @@
         "ts-node": "~8.2.0",
         "tslint": "~5.17.0",
         "typescript": "~3.4.5",
-        "webpack-bundle-analyzer": "^3.3.2"
+        "webpack-bundle-analyzer": "^3.3.2",
+        "browserify": "^16.2.2"
     }
 }
